# containerd-shim-wasmer

./: Cargo.toml  README.md
src/: executor.rs  lib.rs  oci_wasmer.rs
src/instance/: instance_linux.rs
