[package]
name = "containerd-shim-wasmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cranelift = ["wasmer-compiler"]

[dependencies]
wasmer = { version = "4.1.1" }
wasmer-wasix = { version = "0.11.0" }
wasmer-compiler = { version = "4.1.1", features = ["compiler"], optional = true }
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi", features = ["libcontainer_default"] }
containerd-shim = "0.4.0"
chrono = "0.4.26"
libc = "0.2.147"
libcontainer = "0.1.0"
log = "0.4.20"
serde_json = "1.0.105"
serde = "1.0.183"
anyhow = "1.0.75"
nix = "0.26.2"
wasi-common = "11.0"
oci-spec = { version = "0.6.2", features = ["runtime"] }
tokio = "1.32.0"
ttrpc = "0.8.0"

[dev-dependencies]
tempfile = "3.7"
libc = "0.2.147"
pretty_assertions = "1"
env_logger = "0.10"

[[bin]]
name = "containerd-shim-wasmer-v1"
path = "src/bin/containerd-shim-wasmer-v1/main.rs"

[[bin]]
name = "containerd-shim-wasmerd-v1"
path = "src/bin/containerd-shim-wasmerd-v1/main.rs"

[[bin]]
name = "containerd-wasmerd"
path = "src/bin/containerd-wasmerd/main.rs"
